# agent-expression

./: .env.example  .gitignore  CONTRIBUTORS.md  LICENSE  README.md  SKILL.md  install.ps1  install.sh  pyproject.toml
agents/: openai.yaml
hermes-tools/: README.md  add_meme_tool.py  search_meme_tool.py
packs/: README.md
packs/official-001/: CREDITS.md  index.db  manifest.json
references/: categories.md  hosts.md  meme-db-schema.md  meme-embeddings-schema.md
scripts/: add-meme.py  classify-and-add-meme.py  embed-memes.py  index-memes.py  meme_db.py  meme_embed.py  pick-meme.py  search-meme.py  search_core.py
tests/: test_codex_integration.py
