[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-expression"
version = "2.3.1"
description = "Local meme search and delivery helpers for coding agents"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
vector = ["numpy>=1.24"]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
